--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
   }
   #menu_list{
 	background-color:#f5c71a;
-	color:white; 
+	color:black; 
 	width: 200px;
 	border: none;
   }
@@ -83,7 +83,7 @@ body{
 	height:100px;
 	border: none;
 	background-color:#e2062c;
-	color:white;
+	color:black;
 	font-size: 15px;
 	font-family: cursive;
   }
@@ -119,7 +119,7 @@ body{
 }
 
 #display_menu{
-	color: #000000;
+	color: black;
 }
 
 #display_addedmenu{
